# whisper-ui

./: .gitignore  .gitmodules  Dockerfile  Earthfile  README.md  app.py  build.sh  dev.requirements.in  dev.requirements.txt  pyproject.toml  requirements.in  requirements.txt  transcribe.sh
.devcontainer/: Dockerfile  devcontainer.json
.streamlit/: config.toml
src/: download.py  transcribe.py
