[project]
name = "whsiper-ui"
version = "0.1.0"
description = "A basic Streamlit UI for OpenAI's Whisper speech recognition model"
readme = "README.md"
requires-python = "=3.9"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"